<resources>
    <string name="app_name">AgriDirect</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_icon">App Icon</string>
    <string name="agridirect">AgriDirect</string>
    <string name="connecting_farmers_with_buyers">Connecting Farmers with Buyers</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginbtn">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="register">Register</string>
    <string name="registeremail">Email</string>
    <string name="registerpassword">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_name">Name</string>
    <string name="your_state">State</string>
    <string name="your_district">District</string>
    <string name="your_locale_address">Locale Address</string>
    <string name="registerbtn">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="place_bid">Place Bid</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="bid_price">Bid Price</string>
    <string name="bid_quantity">Bid Quantity</string>
    <string name="bid_status">Bid Status</string>
    <string name="current_bid_0">Current Bid: ₹0</string>
    <string name="_0">₹0</string>
    <string name="quantity">Quantity</string>
    <string name="measuring_unit">Measuring Unit</string>
    <string name="variety">Variety</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">Product Image</string>
</resources>