<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_gravity="start"
                card_view:cardCornerRadius="5dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="5dp"
                android:layout_height="100dp">
                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/product_image"
                    android:src="@drawable/noimageavailable"
                    android:background="@drawable/image_rounded_background" />
            </androidx.cardview.widget.CardView>
            <!-- Product Name -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:fontFamily="@font/poppins_regular"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/productnamecolor"
                android:layout_marginBottom="4dp" />

            <!-- Variety, Unit, Quantity -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productvariety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/variety"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textColor="@color/productvarietycolor" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productunit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measuring_unit"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textColor="@color/productvarietycolor" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productquantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textColor="@color/productvarietycolor" />

            <!-- Price and Bidding -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textColor="@color/productnamecolor"
                android:layout_marginTop="6dp" />





        </LinearLayout>
        <!-- Product Image -->


        <!-- Product Details Column -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bidstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bid_status"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/bidstatuscolor"
                android:layout_marginTop="2dp" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/current_bid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/current_bid_0"
                android:textSize="14sp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/currentbidcolor"
                android:layout_marginTop="4dp" />


            <!-- Input Fields -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bid_quantity_layout"
                android:layout_width="180dp"
                android:layout_height="wrap_content"

                app:boxBackgroundMode="filled"
                android:hint="@string/bid_quantity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bid_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bidinput_layout"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:boxBackgroundMode="filled"
                android:hint="@string/bid_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bid_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Buttons Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"

                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addtocartbtn"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Wishlist"
                    android:elevation="20dp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/button_tint_selector"
                    app:cornerRadius="7dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/place_bid_button"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/place_bid"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/button_tint_selector"
                    app:cornerRadius="7dp"
                    android:elevation="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
