<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient_overlay"
    tools:context=".activities.LoginActivity">

    <!-- Title -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/buttoncolor"
        android:layout_marginTop="27dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="32dp">
    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <!-- Password Field -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginbtn"
        android:elevation="10dp"
        android:typeface="sans"
        android:backgroundTint="@color/button_tint_selector"
        android:textColor="@android:color/white"
        app:cornerRadius="5dp"
        />

    <!-- Register Redirect -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="#113965"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
         />

</LinearLayout>
